--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 chrono = "0.4.1"
 cron-parser = "*"
+winapi = {version = "0.3", features = ["wincon", "winuser"]}
